--- a/paginas/login/styles.css
+++ b/paginas/login/styles.css
@@ -6,6 +6,26 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    --x-0: 91%;
+    --c-0: hsla(232.5, 0%, 0%, 1);
+    --y-0: 90%;
+    --x-1: 17%;
+    --c-1: hsla(75, 0%, 0%, 1);
+    --y-1: 24%;
+    --c-2: hsla(232.5, 25%, 12%, 1);
+    --y-2: 32%;
+    --x-2: 11%;
+    --x-3: 2%;
+    --y-3: 31%;
+    --c-3: hsla(254.00000000000034, 4%, 40%, 1);
+    --x-4: 74%;
+    --y-4: 93%;
+    --c-4: hsla(349, 0%, 0%, 1);
+    background-color: hsla(232.5, 0%, 0%, 1);
+    background-image: radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0), transparent var(--s-end-0)), radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1), transparent var(--s-end-1)), radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2), transparent var(--s-end-2)), radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3), transparent var(--s-end-3)), radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4), transparent var(--s-end-4));
+    animation: hero-gradient-animation 10s linear infinite alternate;
+    background-blend-mode: normal, normal, normal, normal, normal;
+    min-height: 100vh;
 }
 
 @keyframes hero-gradient-animation {
@@ -36,7 +56,6 @@ body {
         --y-4: 93%;
         --c-4: hsla(349, 0%, 0%, 1);
     }
-
     100% {
         --s-start-0: 19%;
         --s-end-0: 69%;
@@ -84,29 +103,6 @@ body {
     initial-value: 91%;
 }
 
-body {
-    --x-0: 91%;
-    --c-0: hsla(232.5, 0%, 0%, 1);
-    --y-0: 90%;
-    --x-1: 17%;
-    --c-1: hsla(75, 0%, 0%, 1);
-    --y-1: 24%;
-    --c-2: hsla(232.5, 25%, 12%, 1);
-    --y-2: 32%;
-    --x-2: 11%;
-    --x-3: 2%;
-    --y-3: 31%;
-    --c-3: hsla(254.00000000000034, 4%, 40%, 1);
-    --x-4: 74%;
-    --y-4: 93%;
-    --c-4: hsla(349, 0%, 0%, 1);
-    background-color: hsla(232.5, 0%, 0%, 1);
-    background-image: radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0), transparent var(--s-end-0)), radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1), transparent var(--s-end-1)), radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2), transparent var(--s-end-2)), radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3), transparent var(--s-end-3)), radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4), transparent var(--s-end-4));
-    animation: hero-gradient-animation 10s linear infinite alternate;
-    background-blend-mode: normal, normal, normal, normal, normal;
-    min-height: 100vh; 
-}
-
 #fondo-animado {
     --x-0: 91%;
     --c-0: hsla(232.5, 0%, 0%, 1);
@@ -127,7 +123,7 @@ body {
     background-image: radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0), transparent var(--s-end-0)), radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1), transparent var(--s-end-1)), radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2), transparent var(--s-end-2)), radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3), transparent var(--s-end-3)), radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4), transparent var(--s-end-4));
     animation: hero-gradient-animation 10s linear infinite alternate;
     background-blend-mode: normal, normal, normal, normal, normal;
-    min-height: 100vh; 
+    min-height: 100vh;
 }
 
 .login-container {
@@ -181,10 +177,6 @@ body {
     background-color: #d5b141;
 }
 
-.btn-hover {
-    background-color: #cda42b;
-}
-
 .login-footer {
     text-align: center;
     margin-top: 1rem;
@@ -201,9 +193,8 @@ body {
 
 .btn-back {
     display: flex;
-    justify-content: flex-end;
-    margin-bottom: 1rem;
     justify-content: left;
+    margin-bottom: 1rem;
 }
 
 .btn-back button {
@@ -225,28 +216,21 @@ body {
     margin-bottom: 1.5rem;
 }
 
-.modal-title {
+.modal-title, .modal-body {
     color: #000;
 }
 
-.modal-body {
-    color: #000;
-    padding-bottom: 1rem;
-}
-
-/* Estilo para el mensaje de error */
 .error-message {
-    color: #e74c3c; /* Rojo para el mensaje de error */
+    color: #e74c3c;
     font-size: 0.9rem;
     margin-top: 1rem;
-    display: none; /* Inicialmente oculto */
+    display: none;
 }
 
 .error-message.d-block {
-    display: block; /* Mostrar el mensaje de error cuando se añada esta clase */
+    display: block;
 }
 
-/* Otros estilos para el modal */
 .modal-content {
     padding: 1.5rem;
     background-color: #fff;
@@ -254,20 +238,14 @@ body {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
-.modal-header {
-    border-bottom: none;
-}
-
-.modal-footer {
-    border-top: none;
+.modal-header, .modal-footer {
+    border: none;
 }
 
 .modal-title {
     font-size: 1.5rem;
-    color: #000;
 }
 
-/* Estilos de los botones del modal */
 .btn-primary {
     background-color: #cda42b;
     border: none;
@@ -291,4 +269,12 @@ body {
     .login-header h1 {
         font-size: 1.5rem;
     }
+}
+
+.icon-container {
+    background-color: #333;
+}
+
+.icon-container i {
+    color: #fff;
 }
