--- a/paginas/nuestros_servicios/styles.css
+++ b/paginas/nuestros_servicios/styles.css
@@ -55,12 +55,8 @@ header .login-btn:hover {
     background-color: #f57c00;
 }
 
-.container-fluid {
+.container-fluid, .offcanvas-header {
     background-color: #cda42b;
-}
-
-.offcanvas-header {
-    background-color:#cda42b;
 }
 
 .btn-primary {
@@ -104,6 +100,10 @@ header .login-btn:hover {
     overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .service-card:hover {
@@ -138,6 +138,13 @@ header .login-btn:hover {
 
 .service-info button:hover {
     background-color: #e68a00;
+}
+
+/* Image styles */
+.service-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
 
 /* Modal styles */
