--- a/admin_paginas/contact-admin/styles.css
+++ b/admin_paginas/contact-admin/styles.css
@@ -103,14 +103,14 @@ header .login-btn:hover {
     right: 20px;
     background-color: #25d366;
     color: white;
-    padding: 20px;  
-    border-radius: 50%;
+    padding: 15px 25px;
+    border-radius: 50px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    font-size: 30px; 
+    font-size: 30px;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
     z-index: 1000;
     cursor: pointer;
-    animation: pulse 2s infinite; /
+    animation: pulse 2s infinite;
 }
 
 .whatsapp-btn:hover {
