--- a/paginas/contactanos/styless.css
+++ b/paginas/contactanos/styless.css
@@ -132,6 +132,7 @@ header .login-btn:hover {
     background-color: #f57c00;
 }
 
+
 /* Footer Styles */
 footer {
     text-align: center;
@@ -147,14 +148,14 @@ footer {
     right: 20px;
     background-color: #25d366;
     color: white;
-    padding: 20px;  
-    border-radius: 50%;
+    padding: 15px 25px;
+    border-radius: 50px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    font-size: 30px; 
+    font-size: 30px;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
     z-index: 1000;
     cursor: pointer;
-    animation: pulse 2s infinite; /
+    animation: pulse 2s infinite;
 }
 
 .whatsapp-btn:hover {
