--- a/paginas/login/styles.css
+++ b/paginas/login/styles.css
@@ -6,124 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    --x-0: 91%;
-    --c-0: hsla(232.5, 0%, 0%, 1);
-    --y-0: 90%;
-    --x-1: 17%;
-    --c-1: hsla(75, 0%, 0%, 1);
-    --y-1: 24%;
-    --c-2: hsla(232.5, 25%, 12%, 1);
-    --y-2: 32%;
-    --x-2: 11%;
-    --x-3: 2%;
-    --y-3: 31%;
-    --c-3: hsla(254.00000000000034, 4%, 40%, 1);
-    --x-4: 74%;
-    --y-4: 93%;
-    --c-4: hsla(349, 0%, 0%, 1);
-    background-color: hsla(232.5, 0%, 0%, 1);
-    background-image: radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0), transparent var(--s-end-0)), radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1), transparent var(--s-end-1)), radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2), transparent var(--s-end-2)), radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3), transparent var(--s-end-3)), radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4), transparent var(--s-end-4));
-    animation: hero-gradient-animation 10s linear infinite alternate;
-    background-blend-mode: normal, normal, normal, normal, normal;
-    min-height: 100vh;
-}
-
-@keyframes hero-gradient-animation {
-    0% {
-        --s-start-0: 1%;
-        --s-end-0: 61%;
-        --x-0: 91%;
-        --c-0: hsla(232.5, 0%, 0%, 1);
-        --y-0: 90%;
-        --x-1: 17%;
-        --c-1: hsla(75, 0%, 0%, 1);
-        --y-1: 24%;
-        --s-start-1: 0%;
-        --s-end-1: 55%;
-        --c-2: hsla(232.5, 25%, 12%, 1);
-        --s-start-2: 19%;
-        --s-end-2: 54%;
-        --y-2: 32%;
-        --x-2: 11%;
-        --x-3: 2%;
-        --y-3: 31%;
-        --c-3: hsla(254.00000000000034, 4%, 40%, 1);
-        --s-start-3: 0%;
-        --s-end-3: 67%;
-        --s-start-4: 12%;
-        --s-end-4: 82%;
-        --x-4: 74%;
-        --y-4: 93%;
-        --c-4: hsla(349, 0%, 0%, 1);
-    }
-    100% {
-        --s-start-0: 19%;
-        --s-end-0: 69%;
-        --x-0: 49%;
-        --c-0: hsla(232.50000000000048, 9%, 28%, 1);
-        --y-0: 25%;
-        --x-1: 1%;
-        --c-1: hsla(241.99999999999886, 10%, 23%, 1);
-        --y-1: 41%;
-        --s-start-1: 3%;
-        --s-end-1: 77%;
-        --c-2: hsla(321, 0%, 0%, 1);
-        --s-start-2: 6%;
-        --s-end-2: 73%;
-        --y-2: 93%;
-        --x-2: 44%;
-        --x-3: 97%;
-        --y-3: 51%;
-        --c-3: hsla(246.17647058823542, 10%, 23%, 1);
-        --s-start-3: 8%;
-        --s-end-3: 86%;
-        --s-start-4: 20%;
-        --s-end-4: 75%;
-        --x-4: 10%;
-        --y-4: 69%;
-        --c-4: hsla(232.5, 19%, 16%, 1);
-    }
-}
-
-@property --s-start-0 {
-    syntax: '<percentage>';
-    inherits: false;
-    initial-value: 1%;
-}
-
-@property --s-end-0 {
-    syntax: '<percentage>';
-    inherits: false;
-    initial-value: 61%;
-}
-
-@property --x-0 {
-    syntax: '<percentage>';
-    inherits: false;
-    initial-value: 91%;
-}
-
-#fondo-animado {
-    --x-0: 91%;
-    --c-0: hsla(232.5, 0%, 0%, 1);
-    --y-0: 90%;
-    --x-1: 17%;
-    --c-1: hsla(75, 0%, 0%, 1);
-    --y-1: 24%;
-    --c-2: hsla(232.5, 25%, 12%, 1);
-    --y-2: 32%;
-    --x-2: 11%;
-    --x-3: 2%;
-    --y-3: 31%;
-    --c-3: hsla(254.00000000000034, 4%, 40%, 1);
-    --x-4: 74%;
-    --y-4: 93%;
-    --c-4: hsla(349, 0%, 0%, 1);
-    background-color: hsla(232.5, 0%, 0%, 1);
-    background-image: radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0), transparent var(--s-end-0)), radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1), transparent var(--s-end-1)), radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2), transparent var(--s-end-2)), radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3), transparent var(--s-end-3)), radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4), transparent var(--s-end-4));
-    animation: hero-gradient-animation 10s linear infinite alternate;
-    background-blend-mode: normal, normal, normal, normal, normal;
-    min-height: 100vh;
+    background-color: #000000;
 }
 
 .login-container {
