--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ header nav a:hover {
     animation: fadeInUp 1.5s ease-out, colorChange 5s infinite alternate;
 }
 
+h3 {
+    text-transform: capitalize;  
+}
+
 @keyframes fadeInUp {
     0% {
         opacity: 0;
@@ -119,6 +123,7 @@ header nav a:hover {
     color: #d4af37;
 }
 
+
 .news-card, .team-card {
     background-color: #222;
     border: 1px solid #444;
@@ -148,6 +153,7 @@ footer {
     color: #ffffff;
     font-size: 14px;
 }
+
 
 .login-btn {
     position: absolute;
