--- a/css/blog.css
+++ b/css/blog.css
@@ -379,3 +379,12 @@ footer {
         padding: 8px 20px;
     }
 }
+.btn-primary {
+    background-color: #d4af37;
+    border: #d4af37;
+}
+
+.btn:hover {
+    background-color: #d4af37;
+    border: #d4af37;
+}
